--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "num2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@prisma/client": "^6.0.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "aws-sdk": "^2.1692.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.13.1",
-    "lucide-react": "^0.468.0",
-    "next": "15.0.3",
-    "next-auth": "^5.0.0-beta.25",
-    "nodemailer": "^6.9.16",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.1",
-    "swiper": "^11.1.15",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "prisma": "^6.0.1",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5"
-  }
+    "name": "num2",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^2.7.4",
+        "@prisma/client": "^6.0.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "aws-sdk": "^2.1692.0",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "framer-motion": "^11.13.1",
+        "lucide-react": "^0.468.0",
+        "next": "15.0.3",
+        "next-auth": "^5.0.0-beta.25",
+        "next-nprogress-bar": "^2.4.3",
+        "nodemailer": "^6.9.16",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.4.0",
+        "react-markdown": "^9.0.1",
+        "swiper": "^11.1.15",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.49",
+        "prisma": "^6.0.1",
+        "tailwindcss": "^3.4.16",
+        "typescript": "^5"
+    }
 }
