--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@prisma/client": "^6.0.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "aws-amplify": "^6.11.0",
         "aws-sdk": "^2.1692.0",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
@@ -33,13 +34,20 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@aws-amplify/backend": "^1.11.0",
+        "@aws-amplify/backend-cli": "^1.4.5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.4.20",
+        "aws-cdk": "^2.173.2",
+        "aws-cdk-lib": "^2.173.2",
+        "constructs": "^10.4.2",
+        "esbuild": "^0.24.2",
         "postcss": "^8.4.49",
         "prisma": "^6.0.1",
         "tailwindcss": "^3.4.16",
-        "typescript": "^5"
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.2"
     }
 }
