--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "devDependencies": {
         "@aws-amplify/backend": "^1.11.0",
         "@aws-amplify/backend-cli": "^1.4.5",
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
